Forcibly show accelerator for `JMenu`s