@@ -200,6 +200,8 @@
                         <javaOption>--enable-preview</javaOption>
                         <!-- To make ChannelBinaryReader not close the underlying channel on interrupt -->
                         <javaOption>--add-opens=java.base/sun.nio.ch=odradek.core</javaOption>
+                        <!-- To make allow setting accelerators on JMenu -->
+                        <javaOption>--add-opens=java.desktop/javax.swing=odradek.ui</javaOption>
                         <!-- Fixes canvas flickering on resize -->
                         <javaOption>-Dsun.awt.noerasebackground=true</javaOption>
                         <!-- Fixes OpenGL context creation on Wayland -->
